[tool.poetry]
name = "genkeys"
version = "0.1.0"
description = "Generate keys, seed, addresses, mnemonic"
authors = ["Otto Quaglio <otto.q@gmx.com>"]
license = "GPL3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
bip-utils = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
